Binary file subsystem was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -357,7 +357,6 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         unsigned int width,</span></big><big><span style="font-style: italic;">const
         unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
-
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -511,7 +510,6 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         &amp;screen);</span> – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
-
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -529,7 +527,6 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       – Do vertical background mirror.<br>
       <span style="font-style: italic;">void Backgrround::complex_mirror();</span>
       – Do both horizontal and vertical background mirror. </big> <big> <span
-
         style="font-style: italic;">void Background::draw_background();</span> –
       Draw a background.<br>
       <br>
@@ -1764,6 +1761,7 @@ Multimedia API</a>. </big>
         2.3.9 – Small changes.<br>
         2.4 – Mouse input was improved.<br>
         2.4.1 – Small changes.<br>
+        2.4.2 – Binary file subsystem was improved.<br>
       </big></span>
   </body>
 </html>
